--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.14.0",
     "class-validator": "^0.14.1",
+    "jose": "^5.4.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
