--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,106 +1,17 @@
+version: 'latest'
+
 services:
-  auth_db:
+  db:
     image: postgres:latest
+    restart: always
     environment:
-      PGDATA: /var/lib/postgresql/data/auth_pgdata
-      POSTGRES_USER: ${AUTH_POSTGRES_USER}
-      POSTGRES_PASSWORD: ${AUTH_POSTGRES_PASSWORD}
-    healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U postgres']
-      interval: 5s
-      timeout: 5s
-      retries: 5
-    networks:
-      - auth_db_net
-    restart: unless-stopped
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - auth_db_data:/var/lib/postgresql/data/auth_pgdata
-
-  api_db:
-    image: postgres:latest
-    environment:
-      PGDATA: /var/lib/postgresql/data/api_pgdata
-      POSTGRES_USER: ${API_POSTGRES_USER}
-      POSTGRES_PASSWORD: ${API_POSTGRES_PASSWORD}
-    healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U postgres']
-      interval: 5s
-      timeout: 5s
-      retries: 5
-    networks:
-      - api_db_net
-    restart: unless-stopped
-    volumes:
-      - api_db_data:/var/lib/postgresql/data/api_pgdata
-
-  search:
-    image: opensearchproject/opensearch:latest
-    environment:
-      cluster.name: fusionauth
-      discovery.type: single-node
-      node.name: search
-      plugins.security.disabled: true
-      bootstrap.memory_lock: true
-      OPENSEARCH_JAVA_OPTS: ${OPENSEARCH_JAVA_OPTS}
-    healthcheck:
-      interval: 10s
-      retries: 80
-      test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:9200/
-    restart: unless-stopped
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-      nofile:
-        soft: 65536
-        hard: 65536
+      - postgres_data:/var/lib/postgresql/data
     ports:
-      - 9200:9200 # REST API
-      - 9600:9600 # Performance Analyzer
-    volumes:
-      - search_data:/usr/share/opensearch/data
-    networks:
-      - search_net
-
-  fusionauth:
-    image: fusionauth/fusionauth-app:latest
-    depends_on:
-      auth_db:
-        condition: service_healthy
-      search:
-        condition: service_healthy
-    environment:
-      DATABASE_URL: jdbc:postgresql://auth_db:5432/fusionauth
-      DATABASE_ROOT_USERNAME: ${AUTH_POSTGRES_USER}
-      DATABASE_ROOT_PASSWORD: ${AUTH_POSTGRES_PASSWORD}
-      DATABASE_USERNAME: ${AUTH_DATABASE_USERNAME}
-      DATABASE_PASSWORD: ${AUTH_DATABASE_PASSWORD}
-      FUSIONAUTH_APP_MEMORY: ${FUSIONAUTH_APP_MEMORY}
-      FUSIONAUTH_APP_RUNTIME_MODE: ${FUSIONAUTH_APP_RUNTIME_MODE}
-      FUSIONAUTH_APP_URL: http://fusionauth:9011
-      SEARCH_SERVERS: http://search:9200
-      SEARCH_TYPE: elasticsearch
-      FUSIONAUTH_APP_KICKSTART_FILE: ${FUSIONAUTH_APP_KICKSTART_FILE}
-    networks:
-      - auth_db_net
-      - search_net
-    restart: unless-stopped
-    ports:
-      - 9011:9011
-    volumes:
-      - fusionauth_config:/usr/local/fusionauth/config
-      - ./kickstart:/usr/local/fusionauth/kickstart
-
-networks:
-  auth_db_net:
-    driver: bridge
-  api_db_net:
-    driver: bridge
-  search_net:
-    driver: bridge
+      - '5432:5432'
 
 volumes:
-  auth_db_data:
-  api_db_data:
-  fusionauth_config:
-  search_data:
+  postgres_data:
