--- a/backend/package.json
+++ b/backend/package.json
@@ -39,7 +39,8 @@
     "prisma": "^5.16.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "smtpexpress": "^0.0.14"
+    "smtpexpress": "^0.0.14",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -50,6 +51,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
+    "@types/speakeasy": "^2.0.10",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
