--- a/backend/package.json
+++ b/backend/package.json
@@ -29,9 +29,11 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
+    "@types/dinero.js": "^1.9.4",
     "argon2": "^0.40.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dinero.js": "^1.9.1",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -40,7 +42,8 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "smtpexpress": "^0.0.14",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "twilio": "^5.2.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
