--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@langchain/core": "^0.2.15",
+    "@langchain/groq": "^0.0.13",
+    "@langchain/langgraph": "^0.0.26",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
@@ -36,6 +39,7 @@
     "class-validator": "^0.14.1",
     "dinero.js": "^1.9.1",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.2.9",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -44,7 +48,8 @@
     "rxjs": "^7.8.1",
     "smtpexpress": "^0.0.14",
     "speakeasy": "^2.0.0",
-    "twilio": "^5.2.2"
+    "twilio": "^5.2.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
@@ -70,7 +75,7 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
