--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "dinero.js": "^2.0.0-alpha.14",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.2.9",
+    "luxon": "^3.4.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -58,6 +59,7 @@
     "@prisma/client": "^5.16.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/speakeasy": "^2.0.10",
