--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "db:start": "docker compose down -v && sleep 2 && docker volume prune && sleep 2 && docker compose up -d",
+    "db:reset": "docker compose down && sleep 2 && docker volume prune --force",
+    "db:start": "docker compose down && sleep 2 && sleep 2 && docker compose up -d",
     "prestart": "npm run db:start && sleep 2 && npx prisma migrate dev",
     "start": "nest start",
     "start:dev": "npm run prestart && nest start --watch",
