--- a/agent-system/package.json
+++ b/agent-system/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.4.5",
     "esrun": "^3.2.26",
     "langchain": "^0.2.9",
+    "ts-node": "^10.9.2",
+    "yaml": "^2.4.5",
     "zod": "^3.23.8"
   }
 }
