--- a/backend/package.json
+++ b/backend/package.json
@@ -50,6 +50,7 @@
     "smtpexpress": "^0.0.14",
     "speakeasy": "^2.0.0",
     "twilio": "^5.2.2",
+    "yaml": "^2.4.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
