--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,3 +10,8 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - '5432:5432'
+    volumes:
+      - db_data:/var/lib/postgresql/data
+
+volumes:
+  db_data:
