--- a/backend/package.json
+++ b/backend/package.json
@@ -24,9 +24,6 @@
   },
   "dependencies": {
     "@dinero.js/currencies": "^2.0.0-alpha.14",
-    "@langchain/core": "^0.2.15",
-    "@langchain/groq": "^0.0.13",
-    "@langchain/langgraph": "^0.0.26",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
@@ -39,7 +36,6 @@
     "class-validator": "^0.14.1",
     "dinero.js": "^2.0.0-alpha.14",
     "jsonwebtoken": "^9.0.2",
-    "langchain": "^0.2.9",
     "luxon": "^3.4.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -49,9 +45,7 @@
     "rxjs": "^7.8.1",
     "smtpexpress": "^0.0.14",
     "speakeasy": "^2.0.0",
-    "twilio": "^5.2.2",
-    "yaml": "^2.4.5",
-    "zod": "^3.23.8"
+    "twilio": "^5.2.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
