--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dinero.js": "^2.0.0-alpha.14",
+    "groq-sdk": "^0.5.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "passport": "^0.7.0",
