--- a/backend/package.json
+++ b/backend/package.json
@@ -36,9 +36,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cron": "^3.1.7",
+    "cytoscape": "^3.30.1",
+    "cytoscape-dagre": "^2.5.0",
     "dinero.js": "^2.0.0-alpha.14",
     "groq-sdk": "^0.5.0",
     "jsonwebtoken": "^9.0.2",
+    "llamaindex": "^0.5.6",
     "luxon": "^3.4.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -55,6 +58,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@prisma/client": "^5.16.0",
+    "@types/cytoscape": "^3.21.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/luxon": "^3.4.2",
