--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,7 +1,7 @@
 version: 'latest'
 
 services:
-  postgres:
+  nancy:
     image: postgres:latest
     restart: always
     environment:
@@ -11,7 +11,35 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - nancy_data:/var/lib/postgresql/data
+
+  auth:
+    image: 'postgres:latest'
+    restart: always
+    environment:
+      POSTGRES_USER: supertokens_user 
+      POSTGRES_PASSWORD: somePassword 
+      POSTGRES_DB: supertokens
+    ports:
+      - 5433:5433
+    networks:
+      - app_network
+  
+  supertokens:
+    image: registry.supertokens.io/supertokens/supertokens-postgresql:9.1.0
+    restart: always
+    depends_on:
+      - auth
+    ports:
+      - 3567:3567
+    environment:
+      POSTGRESQL_CONNECTION_URI: "postgresql://supertokens_user:somePassword@db:5433/supertokens"
+    networks:
+      - app_network
 
 volumes:
-  postgres_data:
+  nancy_data:
+
+networks:
+  app_network:
+    driver: bridge
