--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,45 +1,59 @@
-version: 'latest'
+version: '3'
 
 services:
-  nancy:
-    image: postgres:latest
+  db:
+    image: 'postgres:latest'
+    environment:
+      POSTGRES_USER: supertokens_user
+      POSTGRES_PASSWORD: somePassword
+      POSTGRES_DB: supertokens
+    ports:
+      - 5432:5432
+    networks:
+      - app_network
+    restart: unless-stopped
+    healthcheck:
+      test: ['CMD', 'pg_isready', '-U', 'supertokens_user', '-d', 'supertokens']
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  supertokens:
+    image: registry.supertokens.io/supertokens/supertokens-postgresql:9.1.0
+    depends_on:
+      db:
+        condition: service_healthy
+    ports:
+      - 3567:3567
+    environment:
+      POSTGRESQL_CONNECTION_URI: 'postgresql://supertokens_user:somePassword@db:5432/supertokens'
+    networks:
+      - app_network
+    restart: unless-stopped
+    healthcheck:
+      test: >
+        bash -c 'exec 3<>/dev/tcp/127.0.0.1/3567 && echo -e "GET /hello HTTP/1.1\r\nhost: 127.0.0.1:3567\r\nConnection: close\r\n\r\n" >&3 && cat <&3 | grep "Hello"'
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  nancy-db:
+    image: 'postgres:latest'
     restart: always
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - '5432:5432'
+      - 5433:5432
+    networks:
+      - app_network
     volumes:
       - nancy_data:/var/lib/postgresql/data
-
-  auth:
-    image: 'postgres:latest'
-    restart: always
-    environment:
-      POSTGRES_USER: supertokens_user 
-      POSTGRES_PASSWORD: somePassword 
-      POSTGRES_DB: supertokens
-    ports:
-      - 5433:5433
-    networks:
-      - app_network
-  
-  supertokens:
-    image: registry.supertokens.io/supertokens/supertokens-postgresql:9.1.0
-    restart: always
-    depends_on:
-      - auth
-    ports:
-      - 3567:3567
-    environment:
-      POSTGRESQL_CONNECTION_URI: "postgresql://supertokens_user:somePassword@db:5433/supertokens"
-    networks:
-      - app_network
-
-volumes:
-  nancy_data:
 
 networks:
   app_network:
     driver: bridge
+
+volumes:
+  nancy_data:
