--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.7.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
     "cron": "^3.1.7",
     "dinero.js": "^2.0.0-alpha.14",
     "jsonwebtoken": "^9.0.2",
@@ -58,6 +59,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@prisma/client": "^5.16.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/luxon": "^3.4.2",
